@@ -7,6 +7,8 @@
    Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::GrammaticalGender::Masculine.
  - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::Image::Dog.
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::SexOrGender::Male.
  - Fix author tests for Wikibase::Datatype::Value::Sense.
 
 0.29 2023-04-24T18:31:06+02:00
